# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../toolchain.gni")

ohos_shared_library("libark_ecma_debugger") {
  stack_protector_ret = true
  deps = [ "./dynamic/:libark_ecma_debugger_static" ]
  install_enable = true

  if (is_mingw || is_win) {
    output_extension = "dll"
  } else if (is_mac) {
    output_extension = "dylib"
  } else {
    output_extension = "so"
  }

  part_name = "toolchain"
  subsystem_name = "arkcompiler"
  output_name = "libark_tooling"
}

ohos_shared_library("libarkinspector_plus") {
  deps = [
    "./static/:libarkinspector_plus_static",
  ]

  install_enable = true
  external_deps = [
    "runtime_core:arktsdisassembler",
    "runtime_core:libarktsbase",
    "runtime_core:libarkruntime",
  ]

  external_deps += hiviewdfx_ext_deps
 
  if (is_mingw || is_win) {
    output_extension = "dll"
  } else if (is_mac) {
    output_extension = "dylib"
  } else {
    output_extension = "so"
  }

  output_name = "arkinspector"
  part_name = "toolchain"
  subsystem_name = "arkcompiler"
}

