# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("advanced_ui_component") {
  deps = [
    "atomicservicenavigation/interfaces:atomicservicenavigation",
    "atomicservicetabs/interfaces:atomicservicetabs",
    "atomicserviceweb/interfaces:atomicserviceweb",
    "chip/interfaces:chip",
    "chipgroup/interfaces:chipgroup",
    "composelistitem/interfaces:composelistitem",
    "composetitlebar/interfaces:composetitlebar",
    "counter/interfaces:counter",
    "dialog/interfaces:dialog",
    "downloadfilebutton/interfaces:downloadfilebutton",
    "editabletitlebar/interfaces:editabletitlebar",
    "exceptionprompt/interfaces:exceptionprompt",
    "filter/interfaces:filter",
    "foldsplitcontainer/interfaces:foldsplitcontainer",
    "formmenu/interfaces:formmenu",
    "fullscreenlaunchcomponent/interfaces:fullscreenlaunchcomponent",
    "gridobjectsortcomponent/interfaces:gridobjectsortcomponent",
    "innerfullscreenlaunchcomponent/interfaces:innerfullscreenlaunchcomponent",
    "interstitialdialogaction/interfaces:interstitialdialogaction",
    "multinavigation/interfaces:multinavigation",
    "navpushpathhelper:navpushpathhelper",
    "popup/interfaces:popup",
    "progressbutton/interfaces:progressbutton",
    "segmentbutton/interfaces:segmentbutton",
    "selectionmenu/interfaces:selectionmenu",
    "selecttitlebar/interfaces:selecttitlebar",
    "splitlayout/interfaces:splitlayout",
    "subheader/interfaces:subheader",
    "swiperefresher/interfaces:swiperefresher",
    "tabtitlebar/interfaces:tabtitlebar",
    "toolbar/interfaces:toolbar",
    "treeview/interfaces:treeview",
  ]
}
