# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

ohos_shared_library("ace_drawable") {
  subsystem_name = ace_engine_subsystem
  innerapi_tags = [ "platformsdk" ]
  part_name = ace_engine_part
  branch_protector_ret = "pac_ret"
  if (current_os == "ohos") {
    sanitize = {
      integer_overflow = true
      boundary_sanitize = true
      debug = ace_sanitize_debug
    }
  }

  configs = [ "$ace_root:ace_config" ]
  sources = [
    "js_drawable_descriptor.cpp",
    "pixelmap_drawable_descriptor.cpp",
  ]

  external_deps = [
    "hilog:libhilog",
    "napi:ace_napi",
  ]

  if (!build_ohos_sdk) {
    sources += [ "base/pixel_map_impl.cpp" ]
    external_deps += [
      "image_framework:image",
      "image_framework:image_native",
      "resource_management:global_resmgr",
    ]
  } else {
    sources += [ "base/pixel_map_preview.cpp" ]
  }
}
